# flauto

./: .gitignore  .sconsign.dblite  README.md  SConstruct  dataset.sh  install.sh  pyproject.toml
engine/: training.py
src/flauto/: builder.py  camera_feed.py  controller.py  utils.py
src/flauto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
